<resources>
    <string name="app_name">Questionnaire_App</string>
    <string name="main_name">会社名</string>
    <string name="bt_check">情報を見る</string>
    <string name="bt_new">新規登録</string>
    <string name="bt_member">情報追記</string>
    <string name="bt_in_google_drive">GoogleDriveで取得</string>
    <string name="bt_out_google_drive">GoogleDriveに保存</string>
    <string name="tv_new_customer">個人情報入力</string>
    <string name="tv_new_customer_name">名前</string>
    <string name="tv_new_customer_kana">フリガナ</string>
    <string name="tv_new_customer_sex">性別</string>
    <string name="rb_new_customer_male">男</string>
    <string name="rb_new_customer_female">女</string>
    <string name="rb_new_customer_other">他</string>
    <string name="tv_new_customer_address">住所</string>
    <string name="tv_new_customer_zip">〒</string>
    <string name="tv_new_customer_hyphen">ー</string>
    <string name="tv_new_customer_birth">生年月日</string>
    <string name="rb_new_customer_reiwa">R</string>
    <string name="rb_new_customer_heisei">H</string>
    <string name="rb_new_customer_showa">S</string>
    <string name="rb_new_customer_taisho">T</string>
    <string name="tv_new_customer_year">年</string>
    <string name="tv_new_customer_month">月</string>
    <string name="tv_new_customer_day">日 (</string>
    <string name="tv_new_customer_old">歳)</string>
    <string name="tv_new_customer_tel">電話番号</string>
    <string name="tv_new_customer_mail">メールアドレス</string>
    <string name="tv_new_customer_role">職業</string>
    <string name="btClear">クリア</string>
    <string name="bt_put_information">確認画面へ</string>
    <string name="tv_new_customer_confirm">登録内容確認画面</string>
    <string name="tv_new_customer_confirm_name">名前</string>
    <string name="tv_new_customer_confirm_sex">性別</string>
    <string name="tv_new_customer_confirm_birth">生年月日</string>
    <string name="tv_new_customer_confirm_year">年</string>
    <string name="tv_new_customer_confirm_month">月</string>
    <string name="tv_new_customer_confirm_day">日 (</string>
    <string name="tv_new_customer_confirm_old">歳)</string>
    <string name="tv_new_customer_confirm_tel">電話番号</string>
    <string name="tv_new_customer_confirm_address">住所</string>
    <string name="tv_new_customer_confirm_zip">〒</string>
    <string name="tv_new_customer_confirm_hyphen">ー</string>
    <string name="tv_new_customer_confirm_mail">メールアドレス</string>
    <string name="tv_new_customer_confirm_role">職業</string>
    <string name="bt_save">登録</string>
    <string name="bt_cancel">キャンセル</string>
    <string name="complete_dialog_title">登録完了</string>
    <string name="complete_dialog_msg">登録が完了しました。\nトップ画面に戻るか、次のページに行くか選択してください。</string>
    <string name="complete_dialog_btn_ok">カルテへ</string>
    <string name="complete_dialog_btn_ng">トップ画面へ</string>
    <string name="tv_login_customer_title">顧客選択</string>
    <string name="tv_login_customer_search">検索</string>
    <string name="tv_login_customer_kana">フリガナ</string>
    <string name="tv_login_customer_id">ID</string>
    <string name="tv_questionnaire_title">問診票</string>
    <string name="tv_questionnaire_daytime">現在の日時</string>
    <string name="tv_questionnaire_kana">フリガナ</string>
    <string name="tv_questionnaire_name">名前</string>
    <string name="tv_questionnaire_old">年齢</string>
    <string name="tv_questionnaire_age">歳</string>
    <string name="tv_questionnaire_role">職業</string>
    <string name="tv_questionnaire_question">質問事項</string>
    <string name="tv_questionnaire_question1">■ どうされましたか？辛いところはありますか？</string>
    <string name="tv_questionnaire_question2">■ いつ頃からの症状ですか？</string>
    <string name="tv_questionnaire_question3">■ 原因、きっかけはありますか？</string>
    <string name="tv_questionnaire_question4">■ 現在、通院されていたり、薬を処方されていますか？</string>
    <string name="tv_questionnaire_question5">■ 今までに大きなけがや病気をされたことがありますか？</string>
    <string name="tv_questionnaire_question6">■ 当店をなにで知りましたか？</string>
    <string name="rb_questionnaire_homepage">ホームページ</string>
    <string name="rb_questionnaire_mouth">口コミ</string>
    <string name="rb_questionnaire_way">通りがかり</string>
    <string name="rb_questionnaire_townpage">タウンページ</string>
    <string name="rb_questionnaire_introduce">紹介</string>
    <string name="rb_questionnaire_other">その他</string>
    <string name="tv_questionnaire_comment">紹介者がいる場合紹介者名を記述してください。\nその他を選んだ方はこちらに記述してください。</string>
    <string name="bt_questionnaire_next">次の画面へ</string>
    <string name="tv_questionnaire2_title">問診票</string>
    <string name="tv_questionnaire2_image">(気になる所に印を付けてください)</string>
    <string name="tv_questionnaire2_Disclaimer">《 免 責 事 項 》</string>
    <string name="cb_questionnaire2">事項内容を確認し、承諾しました。</string>
    <string name="tv_questionnaire2_Disclaimer_box">以下に当てはまる方は、当店の施術を受けられない場合があります。\n1. 飲酒及び多量の食事を取った直後、妊娠、風、極度の日焼けをした方。
        \n2. 24時間以内に注射(予防接種)などを受けられた方。
        \n3. 電線小皮膚炎、重度の水虫、半年以内に手術された方。
        \n4. てんかん、骨粗鬆症、狭心症、ペースメーカー使用など心疾患がある方、多量もしくは強力な薬物を服用されている方。
        \n
        \nより快適にお客様に過ごしていただくため、上記以外でも当店の判断で施術途中でもお断りする場合がございます。ご了承ください。
        \n当店の駐車場でのトラブルやお預かり品のトラブルは、一切責任を負いません。貴重品などは自己管理をして頂く用お願いいたします。
        \n
        \n施術について
        \n当店では最新の注意を払っておりますが、お客様の要望で強い力を加えた場合、皮膚が赤くなったりすることがあります。
        \nまた、もみ返し等で翌日のだるさや、痛みを感じる等の症状が出ることもございます。施術中はお客様の責任においてご要望ください。
        \n施術後の怪我や痛みや不調に関して、当店の施術が原因であると明確にならない限りは、いかなる場合も返金・賠償には一切応じません。
        \n施術中の痛みは我慢せず必ずお伝えください。</string>
    <string name="bt_questionnaire_confirm">内容の保存</string>
    <string name="tv_customer_information_confirm">登録内容確認画面</string>
    <string name="tv_customer_information_confirm_name">名前</string>
    <string name="tv_customer_information_confirm_sex">性別</string>
    <string name="tv_customer_information_confirm_birth">生年月日</string>
    <string name="tv_customer_information_confirm_year">年</string>
    <string name="tv_customer_information_confirm_month">月</string>
    <string name="tv_customer_information_confirm_day">日 (</string>
    <string name="tv_customer_information_confirm_old">歳)</string>
    <string name="tv_customer_information_confirm_tel">電話番号</string>
    <string name="tv_customer_information_confirm_address">住所</string>
    <string name="tv_customer_information_confirm_zip">〒</string>
    <string name="tv_customer_information_confirm_hyphen">ー</string>
    <string name="tv_customer_information_confirm_mail">メールアドレス</string>
    <string name="tv_customer_information_confirm_role">職業</string>
    <string name="bt_question">問診票を確認する</string>
    <string name="bt_reenter">再登録する</string>　
    <string name="bt_back">戻る</string>
    <string name="bt_customer_confirm_update">更新する</string>
    <string name="bt_customer_confirm_cancel">キャンセルする</string>
    <string name="tv_question_confirm_login_title">日付選択</string>
    <string name="tv_question_confirm_login_search">検索</string>
    <string name="tv_question_confirm_login_date">日付</string>
    <string name="tv_question_confirm_title">問診票内容確認</string>
    <string name="tv_question_confirm_question1">どうされましたか？辛いところはありますか？</string>
    <string name="tv_question_confirm_question2">いつ頃からの症状ですか？</string>
    <string name="tv_question_confirm_question3">原因、きっかけはありますか？</string>
    <string name="tv_question_confirm_question4">現在、通院されていたり、薬を処方されていますか？</string>
    <string name="tv_question_confirm_question5">今までに大きなけがや病気をされたことはありますか？</string>
    <string name="tv_question_confirm_question6">当店をなにで知りましたか？</string>
    <string name="tv_question_confirm_comment">その他・紹介者</string>
    <string name="bt_re_question">問診票を修正する</string>
    <string name="bt_question_back">戻る</string>
    <string name="tv_re_questionnaire_time">施術時の日時</string>
    <string name="tv_customer_confirm_title">更新内容確認画面</string>
</resources>