<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewCustomer">

    <TextView
        android:id="@+id/tvNewCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_new_customer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNewCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_new_customer_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNewCustomerKana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_new_customer_kana"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNewCustomerBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_new_customer_birth"
        app:layout_constraintStart_toEndOf="@+id/rgNewCustomerSex"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <TextView
        android:id="@+id/tvNewCustomerTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_new_customer_tel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgNewCustomerSex" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewCustomer" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <RadioGroup
        android:id="@+id/rgNewCustomerSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/rbNewCustomerMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/rb_new_customer_male" />

        <RadioButton
            android:id="@+id/rbNewCustomerFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_new_customer_female" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_new_customer_sex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <RadioGroup
        android:id="@+id/rgNewCustomerEra"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNewCustomerBirth"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2">

        <RadioButton
            android:id="@+id/rbNewCustomerReiwa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_new_customer_reiwa" />

        <RadioButton
            android:id="@+id/rbNewCustomerHeisei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_new_customer_heisei" />

        <RadioButton
            android:id="@+id/rbNewCustomerShowa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_new_customer_showa" />

        <RadioButton
            android:id="@+id/rbNewCustomerTaisho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_new_customer_taisho" />


    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_new_customer_old"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewCustomerBirth" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_new_customer_day"
        tools:layout_editor_absoluteX="333dp"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_new_customer_month"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_new_customer_year"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="176dp" />

</androidx.constraintlayout.widget.ConstraintLayout>